--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,12 +1,72 @@
-html,
-body,
-#app {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  transition: background-color 0.3s
+:root {
+  --dmd-white: #f4f4f4;
+
+  --dmd-dark: #202020;
+
+  --dmd-text-white: #2c3e50;
+
+  --dmd-text-dark: #ebebeb;
 }
 
-html.dark {
-  background-color: #121212;
+:root {
+  --color-background: var(--dmd-white);
+  --color-text: var(--dmd-text-white);
+}
+
+:root.dark {
+  --color-background: var(--dmd-dark);
+  --color-text: var(--dmd-text-dark);
+  color-scheme: dark;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+      --color-background: var(---dmd-dark);
+      --color-text: var(var(--dmd-text-dark));
+  }
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  border-width: 0;
+  border-style: solid;
+  border-color: currentColor;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  font-weight: normal;
+}
+
+:root {
+  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
+}
+
+
+#app {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
+}
+
+body {
+  min-width: 320px;
+  min-height: 100vh;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  background-color: var(--color-background);
+  color: var(--color-text);
+  transition: background-color .5s;
 }
