--- a/src/styles/animation.css
+++ b/src/styles/animation.css
@@ -1,3 +1,9 @@
+.flip {
+  transition: transform 1s;
+  transform-style: preserve-3d;
+  transform: rotateX(360deg);
+}
+
 /* Buzz Out */
 @-webkit-keyframes hvr-buzz-out {
   10% {
