--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,7 +1,17 @@
+.svg-div {
+  width: 100%;
+  height: 100%;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.black-ball {
+  background-image: url('/black-ball.svg');
+}
+
 .locked-block {
   background-image: url('/lock-pattern.svg');
 }
-
 
 .lightpath {
   background-size: contain;
